--- a/http.html
+++ b/http.html
@@ -12,6 +12,39 @@
   <script type="text/javascript" src="js/http_interface.js"></script>
 </head>
 <body>
+  <!-- 导航栏 -->
+  <nav class="navbar navbar-default navbar-inverse">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#">
+            <img alt="Brand" width="20" height="20" src="./favicon.ico">
+        </a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li class="active"><a href="./http.html">主页 <span class="sr-only">(current)</span></a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">工具 <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><a href="./http.html">模拟HTTP请求</a></li>
+              <li><a href="./time.html">时间戳转换</a></li>
+            </ul>
+          </li>
+        </ul>
+
+        <p class="navbar-text navbar-right">Github地址：<a href="https://github.com/woohs/Tool" class="navbar-link">woohs</a></p>
+      </div>
+    </div><!-- /.container-fluid -->
+  </nav>
+
   <div class="container">
     <h1>HTTP接口测试工具 V0.0.1</h1>
     <div class="row">
