调整textarea最小宽度

--- a/http.html
+++ b/http.html
@@ -118,8 +118,8 @@
             </div> -->
             <div class="col-sm-12">
               <label for="description">Response Body （建议打开控制台查看返回的数据，会自动格式化）</label>
-              <div class="linedwrap"><div class="lines" style="width: 50px; height: 349px;">
-                <textarea placeholder="Response Body info" id="json_input" style="resize: both; min-width: 1050px; width: 100%; height: 305px;" spellcheck="false" class="json_input"></textarea>
+              <div class="linedwrap"><div class="lines" style="width: 100%; height: 349px;">
+                <textarea placeholder="Response Body info" id="json_input" style="resize: both; min-width: 500px; width: 100%; height: 305px;" spellcheck="false" class="json_input"></textarea>
               </div>
             </div>
           </div>
