--- a/time.html
+++ b/time.html
@@ -30,11 +30,11 @@
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="./http.html">主页 <span class="sr-only">(current)</span></a></li>
+          <li class="active"><a href="./index.html">主页 <span class="sr-only">(current)</span></a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">工具 <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a href="./http.html">模拟HTTP请求</a></li>
+              <li><a href="./index.html">模拟HTTP请求</a></li>
               <li><a href="./time.html">时间戳转换</a></li>
             </ul>
           </li>
