优化js异步引用

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   <title>Tool</title>
 
   <link rel="shortcut icon" href="favicon.ico">
-  <script type="text/javascript" src="lib/jquery.js"></script>
+  <script type="text/javascript" src="lib/jquery.js" defer></script>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
-  <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
+  <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js" defer></script>
   <link rel="stylesheet" href="lib/toastr/toastr.min.css">
-  <script type="text/javascript" src="lib/toastr/toastr.min.js"></script>
+  <script type="text/javascript" src="lib/toastr/toastr.min.js" defer></script>
 
-  <script type="text/javascript" src="js/http_interface.js"></script>
+  <script type="text/javascript" src="js/http_interface.js" defer></script>
 </head>
 <body>
   <!-- 导航栏 -->
