--- a/time.html
+++ b/time.html
@@ -6,10 +6,10 @@
   <title>Tool</title>
 
   <link rel="shortcut icon" href="favicon.ico">
-  <script type="text/javascript" src="lib/jquery.js"></script>
+  <script type="text/javascript" src="lib/jquery.js" defer></script>
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.css">
-  <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js"></script>
-  <script type="text/javascript" src="js/timestamp.js"></script>
+  <script type="text/javascript" src="lib/bootstrap/js/bootstrap.js" defer></script>
+  <script type="text/javascript" src="js/timestamp.js" defer></script>
 </head>
 <body>
   <!-- 导航栏 -->
